build link-arrow component

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, deleniti?
       Repellendus incidunt et harum ipsam ad totam est pariatur aliquid?
     </p>
-    <div></div>
+    <a class="link-arrow" href="#">LEARN MORE</a>
   </body>
 </html>
