--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;600;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="ycyc CSS/normalized.css" />
@@ -23,5 +23,8 @@
       Repellendus incidunt et harum ipsam ad totam est pariatur aliquid?
     </p>
     <a class="link-arrow" href="#">LEARN MORE</a>
+
+    <span class="badge badge--primary badge--small">Offer 50%</span>
+    <span class="badge badge--secondary">Offer 80%</span>
   </body>
 </html>
