--- a/index.html
+++ b/index.html
@@ -26,5 +26,29 @@
 
     <span class="badge badge--primary badge--small">Offer 50%</span>
     <span class="badge badge--secondary">Offer 80%</span>
+
+    <ul class="list list--horizontal">
+      <li class="list__item">item2</li>
+      <li class="list__item">item3</li>
+      <li class="list__item">item1</li>
+    </ul>
+
+    <ul class="list list--vertical">
+      <li class="list__item">item1</li>
+      <li class="list__item">item2</li>
+      <li class="list__item">item3</li>
+    </ul>
+
+    <ul class="list list--tick">
+      <li class="list__item">item1</li>
+      <li class="list__item">item2</li>
+      <li class="list__item">item3</li>
+    </ul>
+
+    <ul class="list list--horizontal list--tick">
+      <li class="list__item">item1</li>
+      <li class="list__item">item2</li>
+      <li class="list__item">item3</li>
+    </ul>
   </body>
 </html>
