--- a/index.html
+++ b/index.html
@@ -50,5 +50,17 @@
       <li class="list__item">item2</li>
       <li class="list__item">item3</li>
     </ul>
+
+    <span class="icon-container">
+      <svg class="icon icon--accent">
+        <use xlink:href="images/sprite.svg#chevron"></use>
+      </svg>
+    </span>
+
+    <span class="icon-container">
+      <svg class="icon icon--primary">
+        <use xlink:href="images/sprite.svg#wordpress"></use>
+      </svg>
+    </span>
   </body>
 </html>
