--- a/index.html
+++ b/index.html
@@ -62,5 +62,10 @@
         <use xlink:href="images/sprite.svg#wordpress"></use>
       </svg>
     </span>
+
+    <button class="btn btn--primary">GET STARTED</button>
+    <button class="btn btn--secondary">BUY NOW</button>
+    <button class="btn btn--accent">CONTACT US</button>
+    <a class="btn btn--transparency" href="#">SIGN IN</a>
   </body>
 </html>
