--- a/index.html
+++ b/index.html
@@ -63,9 +63,14 @@
       </svg>
     </span>
 
-    <button class="btn btn--primary">GET STARTED</button>
+    <button class="btn btn--primary btn--block">GET STARTED</button>
     <button class="btn btn--secondary">BUY NOW</button>
     <button class="btn btn--accent">CONTACT US</button>
-    <a class="btn btn--transparency" href="#">SIGN IN</a>
+    <a class="btn btn--transparency btn--block" href="#">SIGN IN</a>
+
+    <div class="input-group">
+      <input class="input" type="text" placeholder="Enter domain name here.." />
+      <button class="btn btn--accent">CONTACT US</button>
+    </div>
   </body>
 </html>
