--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
     </div>
 
-    <div class="plan">
+    <div class="plan plan--popular">
       <div class="card card--secondary">
         <header class="card__header">
           <h3 class="plan__name">Exclusive</h3>
