--- a/index.html
+++ b/index.html
@@ -114,5 +114,21 @@
         </div>
       </div>
     </div>
+
+    <div class="media">
+      <div class="media__image">
+        <svg class="icon icon--primary">
+          <use xlink:href="images/sprite.svg#snap"></use>
+        </svg>
+      </div>
+      <div class="media__body">
+        <h3 class="media__title">Easy Start & Managed Updates</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sequi
+          voluptatum reiciendis, voluptas odio molestias accusamus aperiam
+          similique fugiat veritatis?
+        </p>
+      </div>
+    </div>
   </body>
 </html>
