--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="ycyc CSS/normalized.css" />
@@ -130,5 +130,24 @@
         </p>
       </div>
     </div>
+
+    <blockquote class="quote">
+      <p class="quote__text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, laborum
+        itaque sit hic delectus id provident tenetur aut obcaecati natus.
+      </p>
+
+      <div class="media">
+        <div class="media__image">
+          <svg class="icon icon--primary">
+            <use xlink:href="images/sprite.svg#line"></use>
+          </svg>
+        </div>
+        <div class="media__body">
+          <h3 class="media__title">John Smith</h3>
+          <p class="media__company">ABC Company</p>
+        </div>
+      </div>
+    </blockquote>
   </body>
 </html>
