--- a/index.html
+++ b/index.html
@@ -149,5 +149,11 @@
         </div>
       </div>
     </blockquote>
+
+    <div class="grid grid--1x2 grid--1x3">
+      <div class="grid__column-1st"></div>
+      <div class="grid__column-2nd"></div>
+      <div class="grid__column-3rd"></div>
+    </div>
   </body>
 </html>
