--- a/index.html
+++ b/index.html
@@ -151,10 +151,45 @@
       </footer>
     </blockquote>
 
-    <div class="grid grid--1x2 grid--1x3">
+    <!-- <div class="grid grid--1x2 grid--1x3">
       <div class="grid__column-1st"></div>
       <div class="grid__column-2nd"></div>
       <div class="grid__column-3rd"></div>
+    </div> -->
+
+    <div class="testimonial">
+      <div class="card testimonial--container">
+        <div class="grid grid--1x2">
+          <div class="testimonial__image">
+            <img src="images/testimonial.jpg" alt="smiling customer image" />
+            <span class="icon-container icon-container--accent">
+              <svg class="icon icon--white icon--small">
+                <use xlink:href="images/sprite.svg#quotes"></use>
+              </svg>
+            </span>
+          </div>
+          <blockquote class="quote">
+            <p class="quote__text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim,
+              laborum itaque sit hic delectus id provident tenetur aut obcaecati
+              natus.
+            </p>
+            <footer>
+              <div class="media">
+                <div class="media__image">
+                  <svg class="icon icon--primary">
+                    <use xlink:href="images/sprite.svg#line"></use>
+                  </svg>
+                </div>
+                <div class="media__body">
+                  <h3 class="media__title quote__author">John Smith</h3>
+                  <p class="quote__company">ABC Company</p>
+                </div>
+              </div>
+            </footer>
+          </blockquote>
+        </div>
+      </div>
     </div>
 
     <div class="testimonial">
@@ -188,6 +223,21 @@
               </div>
             </footer>
           </blockquote>
+        </div>
+      </div>
+    </div>
+
+    <div class="callout">
+      <div class="grid grid--1x2">
+        <div class="callout--info">
+          <h2 class="callout__heading">Ready To Get Started?</h2>
+          <p class="callout__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
+            sapiente veniam maiores neque eaque necessitatibus.
+          </p>
+        </div>
+        <div class="btn btn--secondary btn--long">
+          <a href="#">JOIN NOW</a>
         </div>
       </div>
     </div>
