--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       </div>
     </div>
 
-    <div class="callout">
+    <div class="callout container">
       <div class="grid grid--1x2">
         <div class="callout--info">
           <h2 class="callout__heading">Ready To Get Started?</h2>
@@ -239,6 +239,35 @@
         <div class="btn btn--secondary btn--long">
           <a href="#">JOIN NOW</a>
         </div>
+      </div>
+    </div>
+
+    <div class="block">
+      <header class="block--header">
+        <h2 class="block__heading">Title</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis rerum
+          impedit exercitationem qui mollitia temporibus voluptate, earum
+          dolorum illum error.
+        </p>
+      </header>
+    </div>
+
+    <div class="block block--dark block--skew-right">
+      <div class="grid grid--1x2">
+        <header class="block--header">
+          <h2 class="block__heading">Title</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis rerum
+            impedit exercitationem qui mollitia temporibus voluptate, earum
+            dolorum illum error.
+          </p>
+        </header>
+        <img
+          class="block__banner-img"
+          src="images/banner.png"
+          alt="banner image"
+        />
       </div>
     </div>
   </body>
