--- a/index.html
+++ b/index.html
@@ -300,6 +300,21 @@
       </div>
     </div>
 
+    <nav class="nav collapsible">
+      <a class="nav__logo" href="#">
+        <img src="images/logo.svg" alt="" />
+      </a>
+      <svg class="icon icon--white nav__toggler">
+        <use xlink:href="images/sprite.svg#menu"></use>
+      </svg>
+      <ul class="list nav__list collapsible--content">
+        <li class="list__item"><a href="#">Apple</a></li>
+        <li class="list__item"><a href="#">Banana</a></li>
+        <li class="list__item"><a href="#">Cherry</a></li>
+        <li class="list__item"><a href="#">Durian</a></li>
+      </ul>
+    </nav>
+
     <script src="js/main.js"></script>
   </body>
 </html>
