--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       </header>
     </div>
 
-    <div class="block block--dark block--skew-right">
+    <div class="block block--dark block--skew-right block--bg">
       <div class="grid grid--1x2">
         <header class="block--header">
           <h2 class="block__heading">Title</h2>
@@ -300,7 +300,7 @@
       </div>
     </div>
 
-    <nav class="nav collapsible">
+    <nav class="container nav collapsible">
       <a class="nav__logo" href="#">
         <img src="images/logo.svg" alt="" />
       </a>
@@ -314,6 +314,30 @@
         <li class="list__item"><a href="#">Durian</a></li>
       </ul>
     </nav>
+
+    <section class="block block--dark block--skew-right hero">
+      <div class="container grid grid--1x2">
+        <header class="block--header hero--content">
+          <h2 class="block__heading">Cloud Hosting For Pros</h2>
+          <p class="hero__tagline">
+            Deploy your website in less than 60 seconds
+          </p>
+          <a class="btn btn--accent btn--long" href="#">GET STARTED</a>
+        </header>
+
+        <picture>
+          <source
+            type="image/png"
+            srcset="images/banner.png 1x, images/banner@2x.png 2x"
+          />
+          <source
+            type="image/webp"
+            srcset="images/banner.webp 1x, images/banner@2x.webp 2x"
+          />
+          <img class="hero__img" src="images/banner.png" alt="" />
+        </picture>
+      </div>
+    </section>
 
     <script src="js/main.js"></script>
   </body>
