--- a/index.html
+++ b/index.html
@@ -263,11 +263,22 @@
             dolorum illum error.
           </p>
         </header>
-        <img
-          class="block__banner-img"
-          src="images/banner.png"
-          alt="banner image"
-        />
+
+        <picture>
+          <source
+            type="image/webp"
+            srcset="images/banner.webp 1x, images/banner@2x.webp 2x"
+          />
+          <source
+            type="image/png"
+            srcset="images/banner.png 1x, images/banner@2x.png 2x"
+          />
+          <img
+            class="block__banner-img"
+            src="images/banner.png"
+            alt="banner image"
+          />
+        </picture>
       </div>
     </div>
 
@@ -327,14 +338,15 @@
 
         <picture>
           <source
-            type="image/png"
-            srcset="images/banner.png 1x, images/banner@2x.png 2x"
-          />
-          <source
             type="image/webp"
             srcset="images/banner.webp 1x, images/banner@2x.webp 2x"
           />
-          <img class="hero__img" src="images/banner.png" alt="" />
+          <source
+            type="image/png"
+            srcset="images/banner.png 1x, images/banner@2x.png 2x"
+          />
+
+          <img class="hero__image" src="images/banner.png" alt="" />
         </picture>
       </div>
     </section>
