--- a/index.html
+++ b/index.html
@@ -15,148 +15,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Heading1</h1>
-    <h2>Heading2</h2>
-    <h3>Heading3</h3>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, deleniti?
-      Repellendus incidunt et harum ipsam ad totam est pariatur aliquid?
-    </p>
-    <a class="link-arrow" href="#">LEARN MORE</a>
-
-    <span class="badge badge--primary badge--small">Offer 50%</span>
-    <span class="badge badge--secondary">Offer 80%</span>
-
-    <ul class="list list--horizontal">
-      <li class="list__item">item2</li>
-      <li class="list__item">item3</li>
-      <li class="list__item">item1</li>
-    </ul>
-
-    <ul class="list list--vertical">
-      <li class="list__item">item1</li>
-      <li class="list__item">item2</li>
-      <li class="list__item">item3</li>
-    </ul>
-
-    <ul class="list list--tick">
-      <li class="list__item">item1</li>
-      <li class="list__item">item2</li>
-      <li class="list__item">item3</li>
-    </ul>
-
-    <ul class="list list--horizontal list--tick">
-      <li class="list__item">item1</li>
-      <li class="list__item">item2</li>
-      <li class="list__item">item3</li>
-    </ul>
-
-    <span class="icon-container">
-      <svg class="icon icon--accent">
-        <use xlink:href="images/sprite.svg#chevron"></use>
-      </svg>
-    </span>
-
-    <span class="icon-container">
-      <svg class="icon icon--primary">
-        <use xlink:href="images/sprite.svg#wordpress"></use>
-      </svg>
-    </span>
-
-    <button class="btn btn--primary btn--block">GET STARTED</button>
-    <button class="btn btn--secondary">BUY NOW</button>
-    <button class="btn btn--accent">CONTACT US</button>
-    <a class="btn btn--transparency btn--block" href="#">SIGN IN</a>
-
-    <div class="input-group">
-      <input class="input" type="text" placeholder="Enter domain name here.." />
-      <button class="btn btn--accent">CONTACT US</button>
-    </div>
-
-    <div class="plan">
-      <div class="card card--primary">
-        <header class="card__header">
-          <h3 class="plan__name">Entry</h3>
-          <span class="plan__price">$14</span>
-          <span class="plan__month">/month</span>
-          <span class="badge badge--primary badge--small">Offer 50%</span>
-          <span class="plan__text">East start on the cloud</span>
-        </header>
-        <div class="card__body">
-          <ul class="list list--tick">
-            <li class="list__item">Unlimited Websites</li>
-            <li class="list__item">Unlimited Bandwidth</li>
-            <li class="list__item">100 GB SSD Storage</li>
-            <li class="list__item">3 BG RAM</li>
-          </ul>
-          <button class="btn btn--transparency btn--block">BUY NOW</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="plan plan--popular">
-      <div class="card card--secondary">
-        <header class="card__header">
-          <h3 class="plan__name">Exclusive</h3>
-          <span class="plan__price">$36</span>
-          <span class="plan__month">/year</span>
-          <span class="badge badge--secondary badge--small">Offer 80%</span>
-          <span class="plan__text">East start on the cloud</span>
-        </header>
-        <div class="card__body">
-          <ul class="list list--tick">
-            <li class="list__item">Unlimited Websites</li>
-            <li class="list__item">Unlimited Bandwidth</li>
-            <li class="list__item">100 GB SSD Storage</li>
-            <li class="list__item">3 BG RAM</li>
-          </ul>
-          <button class="btn btn--transparency btn--block">BUY NOW</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="media">
-      <div class="media__image">
-        <svg class="icon icon--primary">
-          <use xlink:href="images/sprite.svg#snap"></use>
-        </svg>
-      </div>
-      <div class="media__body">
-        <h3 class="media__title">Easy Start & Managed Updates</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sequi
-          voluptatum reiciendis, voluptas odio molestias accusamus aperiam
-          similique fugiat veritatis?
-        </p>
-      </div>
-    </div>
-
-    <blockquote class="quote">
-      <p class="quote__text">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, laborum
-        itaque sit hic delectus id provident tenetur aut obcaecati natus.
-      </p>
-      <footer>
-        <div class="media">
-          <div class="media__image">
-            <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#line"></use>
-            </svg>
-          </div>
-          <div class="media__body">
-            <h3 class="media__title quote__author">John Smith</h3>
-            <p class="quote__company">ABC Company</p>
-          </div>
-        </div>
-      </footer>
-    </blockquote>
-
-    <!-- <div class="grid grid--1x2 grid--1x3">
-      <div class="grid__column-1st"></div>
-      <div class="grid__column-2nd"></div>
-      <div class="grid__column-3rd"></div>
-    </div> -->
-
     <div class="testimonial">
       <div class="card testimonial--container">
         <div class="grid grid--1x2">
@@ -349,6 +207,194 @@
           <img class="hero__image" src="images/banner.png" alt="" />
         </picture>
       </div>
+    </section>
+
+    <section class="block container domain--content">
+      <div class="block--header">
+        <h2 class="block__heading">
+          The best webhostinf Starting at per month
+        </h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit
+          mollitia sunt dignissimos accusamus nulla tempora?
+        </p>
+      </div>
+      <div class="input-group">
+        <input
+          class="input"
+          type="text"
+          placeholder="Enter domain name here.."
+        />
+        <button class="btn btn--accent">
+          <svg class="icon icon--white">
+            <use xlink:href="images/sprite.svg#search"></use>
+          </svg>
+          SEARCH
+        </button>
+      </div>
+      <ul class="list block-domain__prices">
+        <li>.sg $7</li>
+        <li><span class="badge badge--secondary"> .com $9.26</span></li>
+        <li>.space $12</li>
+        <li>.info $14</li>
+        <li>.net $16</li>
+        <li>.xyz $10</li>
+      </ul>
+    </section>
+
+    <section class="block container block-plans">
+      <div class="grid grid--1x2 grid--1x3">
+        <div class="plan">
+          <div class="card card--secondary">
+            <header class="card__header">
+              <h3 class="plan__name">Exclusive</h3>
+              <span class="plan__price">$36</span>
+              <span class="plan__month">/year</span>
+              <span class="badge badge--secondary badge--small">Offer 80%</span>
+              <span class="plan__text">East start on the cloud</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">Unlimited Websites</li>
+                <li class="list__item">Unlimited Bandwidth</li>
+                <li class="list__item">100 GB SSD Storage</li>
+                <li class="list__item">3 BG RAM</li>
+              </ul>
+              <button class="btn btn--transparency btn--block">BUY NOW</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="plan plan--popular">
+          <div class="card card--primary">
+            <header class="card__header">
+              <h3 class="plan__name">Exclusive</h3>
+              <span class="plan__price">$36</span>
+              <span class="plan__month">/year</span>
+              <span class="badge badge--primary badge--small">Offer 80%</span>
+              <span class="plan__text">East start on the cloud</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">Unlimited Websites</li>
+                <li class="list__item">Unlimited Bandwidth</li>
+                <li class="list__item">100 GB SSD Storage</li>
+                <li class="list__item">3 BG RAM</li>
+              </ul>
+              <button class="btn btn--transparency btn--block">BUY NOW</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="plan">
+          <div class="card card--secondary">
+            <header class="card__header">
+              <h3 class="plan__name">Exclusive</h3>
+              <span class="plan__price">$36</span>
+              <span class="plan__month">/year</span>
+              <span class="badge badge--secondary badge--small">Offer 80%</span>
+              <span class="plan__text">East start on the cloud</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">Unlimited Websites</li>
+                <li class="list__item">Unlimited Bandwidth</li>
+                <li class="list__item">100 GB SSD Storage</li>
+                <li class="list__item">3 BG RAM</li>
+              </ul>
+              <button class="btn btn--transparency btn--block">BUY NOW</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="block container">
+      <header class="block--header">
+        <h2 class="block__heading">Host On the Cloud to Keep Growing.</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+      </header>
+
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#easy"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Easy to use</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sequi
+            voluptatum reiciendis, voluptas odio molestias accusamus aperiam
+            similique fugiat veritatis?
+          </p>
+          <a class="link-arrow" href="#">LEARN MORE</a>
+        </div>
+
+        <picture>
+          <source
+            type="image/jpg"
+            srcset="images/easy.jpg 1x, images/easy@2x.jpg 2x" />
+          <source
+            type="image/webp"
+            srcset="images/easy.webp 1x, images/easy@2x.webp 2x" />
+          <img class="feature__img" src="images/easy@2x.jpg" alt=""
+        /></picture>
+      </article>
+
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#computer"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Easy to use</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sequi
+            voluptatum reiciendis, voluptas odio molestias accusamus aperiam
+            similique fugiat veritatis?
+          </p>
+          <a class="link-arrow" href="#">LEARN MORE</a>
+        </div>
+
+        <picture>
+          <source
+            type="image/jpg"
+            srcset="images/fast.jpg 1x, images/fast@2x.jpg 2x" />
+          <source
+            type="image/webp"
+            srcset="images/fast.webp 1x, images/fast@2x.webp 2x" />
+          <img class="feature__img" src="images/fast@2x.jpg" alt=""
+        /></picture>
+      </article>
+
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#wordpress"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Easy to use</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sequi
+            voluptatum reiciendis, voluptas odio molestias accusamus aperiam
+            similique fugiat veritatis?
+          </p>
+          <a class="link-arrow" href="#">LEARN MORE</a>
+        </div>
+
+        <picture>
+          <source
+            type="image/jpg"
+            srcset="images/support.jpg 1x, images/support@2x.jpg 2x" />
+          <source
+            type="image/webp"
+            srcset="images/support.webp 1x, images/support@2x.webp 2x" />
+          <img class="feature__img" src="images/support@2x.jpg" alt=""
+        /></picture>
+      </article>
     </section>
 
     <script src="js/main.js"></script>
