--- a/index.html
+++ b/index.html
@@ -168,21 +168,22 @@
         </div>
       </div>
     </div>
-
-    <nav class="container nav collapsible">
-      <a class="nav__logo" href="#">
-        <img src="images/logo.svg" alt="" />
-      </a>
-      <svg class="icon icon--white nav__toggler">
-        <use xlink:href="images/sprite.svg#menu"></use>
-      </svg>
-      <ul class="list nav__list collapsible--content">
-        <li class="list__item"><a href="#">Apple</a></li>
-        <li class="list__item"><a href="#">Banana</a></li>
-        <li class="list__item"><a href="#">Cherry</a></li>
-        <li class="list__item"><a href="#">Durian</a></li>
-      </ul>
-    </nav>
+    <section class="nav--block">
+      <nav class="container nav collapsible">
+        <a class="nav__logo" href="#">
+          <img src="images/logo.svg" alt="" />
+        </a>
+        <svg class="icon icon--white nav__toggler">
+          <use xlink:href="images/sprite.svg#menu"></use>
+        </svg>
+        <ul class="list nav__list collapsible--content">
+          <li class="list__item"><a href="#">Apple</a></li>
+          <li class="list__item"><a href="#">Banana</a></li>
+          <li class="list__item"><a href="#">Cherry</a></li>
+          <li class="list__item"><a href="#">Durian</a></li>
+        </ul>
+      </nav>
+    </section>
 
     <section class="block block--dark block--skew-right hero">
       <div class="container grid grid--1x2">
@@ -395,6 +396,126 @@
           <img class="feature__img" src="images/support@2x.jpg" alt=""
         /></picture>
       </article>
+    </section>
+
+    <section class="block block--dark block--skew-right block--showcase">
+      <header class="block--header block--showcase__header">
+        <h2 class="block__heading">User-Friendly Control Panel</h2>
+      </header>
+      <article class="grid grid--1x2 container">
+        <picture class="block--showcase__img">
+          <source
+            type="image/png"
+            srcset="images/ipad.png 1x, images/ipad@2x.png 2x" />
+          <source
+            type="image/webp"
+            srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x" />
+          <img src="images/ipad@2x.jpg" alt=""
+        /></picture>
+
+        <ul class="list">
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="images/sprite.svg#snap"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Easy Start & Managed Updates</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo
+                  sequi voluptatum reiciendis, voluptas odio molestias accusamus
+                  aperiam similique fugiat veritatis?
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="images/sprite.svg#snap"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Easy Start & Managed Updates</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo
+                  sequi voluptatum reiciendis, voluptas odio molestias accusamus
+                  aperiam similique fugiat veritatis?
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="images/sprite.svg#snap"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Easy Start & Managed Updates</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo
+                  sequi voluptatum reiciendis, voluptas odio molestias accusamus
+                  aperiam similique fugiat veritatis?
+                </p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </article>
+    </section>
+
+    <section class="block">
+      <header class="block--header">
+        <h2>What customer are saying?</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+          quas!
+        </p>
+      </header>
+      <div class="continer">
+        <div class="testimonial">
+          <div class="card testimonial--container">
+            <div class="grid grid--1x2">
+              <div class="testimonial__image">
+                <img
+                  src="images/testimonial.jpg"
+                  alt="smiling customer image"
+                />
+                <span class="icon-container icon-container--accent">
+                  <svg class="icon icon--white icon--small">
+                    <use xlink:href="images/sprite.svg#quotes"></use>
+                  </svg>
+                </span>
+              </div>
+              <blockquote class="quote">
+                <p class="quote__text">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Enim, laborum itaque sit hic delectus id provident tenetur aut
+                  obcaecati natus.
+                </p>
+                <footer>
+                  <div class="media">
+                    <div class="media__image">
+                      <svg class="icon icon--primary">
+                        <use xlink:href="images/sprite.svg#line"></use>
+                      </svg>
+                    </div>
+                    <div class="media__body">
+                      <h3 class="media__title quote__author">John Smith</h3>
+                      <p class="quote__company">ABC Company</p>
+                    </div>
+                  </div>
+                </footer>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <script src="js/main.js"></script>
