footer draft and layout adjustment

--- a/index.html
+++ b/index.html
@@ -15,76 +15,6 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="testimonial">
-      <div class="card testimonial--container">
-        <div class="grid grid--1x2">
-          <div class="testimonial__image">
-            <img src="images/testimonial.jpg" alt="smiling customer image" />
-            <span class="icon-container icon-container--accent">
-              <svg class="icon icon--white icon--small">
-                <use xlink:href="images/sprite.svg#quotes"></use>
-              </svg>
-            </span>
-          </div>
-          <blockquote class="quote">
-            <p class="quote__text">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim,
-              laborum itaque sit hic delectus id provident tenetur aut obcaecati
-              natus.
-            </p>
-            <footer>
-              <div class="media">
-                <div class="media__image">
-                  <svg class="icon icon--primary">
-                    <use xlink:href="images/sprite.svg#line"></use>
-                  </svg>
-                </div>
-                <div class="media__body">
-                  <h3 class="media__title quote__author">John Smith</h3>
-                  <p class="quote__company">ABC Company</p>
-                </div>
-              </div>
-            </footer>
-          </blockquote>
-        </div>
-      </div>
-    </div>
-
-    <div class="testimonial">
-      <div class="card testimonial--container">
-        <div class="grid grid--1x2">
-          <div class="testimonial__image">
-            <img src="images/testimonial.jpg" alt="smiling customer image" />
-            <span class="icon-container icon-container--accent">
-              <svg class="icon icon--white icon--small">
-                <use xlink:href="images/sprite.svg#quotes"></use>
-              </svg>
-            </span>
-          </div>
-          <blockquote class="quote">
-            <p class="quote__text">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim,
-              laborum itaque sit hic delectus id provident tenetur aut obcaecati
-              natus.
-            </p>
-            <footer>
-              <div class="media">
-                <div class="media__image">
-                  <svg class="icon icon--primary">
-                    <use xlink:href="images/sprite.svg#line"></use>
-                  </svg>
-                </div>
-                <div class="media__body">
-                  <h3 class="media__title quote__author">John Smith</h3>
-                  <p class="quote__company">ABC Company</p>
-                </div>
-              </div>
-            </footer>
-          </blockquote>
-        </div>
-      </div>
-    </div>
-
     <div class="callout container">
       <div class="grid grid--1x2">
         <div class="callout--info">
@@ -176,7 +106,7 @@
         <svg class="icon icon--white nav__toggler">
           <use xlink:href="images/sprite.svg#menu"></use>
         </svg>
-        <ul class="list nav__list collapsible--content">
+        <ul class="list collapsible--content nav__list">
           <li class="list__item"><a href="#">Apple</a></li>
           <li class="list__item"><a href="#">Banana</a></li>
           <li class="list__item"><a href="#">Cherry</a></li>
@@ -515,6 +445,78 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="block block--darkgrey footer">
+      <div class="container grid footer--grid">
+        <article class="collapsible collapsible--expanded footer--content">
+          <header class="collapsible--header">
+            <h2 class="collapsible__heading footer__heading">About</h2>
+            <svg class="icon icon--white collapsible__icon">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <ul class="list collapsible--content">
+            <li><a href="#"> AAAAAcbjkcldas/a></li>
+            <li><a href="#"> BBBBB</a></li>
+            <li><a href="#"> CCCCC</a></li>
+            <li><a href="#"> DDDDD</a></li>
+            <li><a href="#"> EEEEE</a></li>
+          </ul>
+        </article>
+
+        <article class="collapsible footer--content">
+          <header class="collapsible--header">
+            <h2 class="collapsible__heading footer__heading">About</h2>
+            <svg class="icon icon--white collapsible__icon">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <ul class="list collapsible--content">
+            <li><a href="#"> AAAAA</a></li>
+            <li><a href="#"> BBBBB</a></li>
+            <li><a href="#"> CCCCC</a></li>
+            <li><a href="#"> DDDDD</a></li>
+            <li><a href="#"> EEEEE</a></li>
+          </ul>
+        </article>
+
+        <article class="collapsible footer--content">
+          <header class="collapsible--header">
+            <h2 class="collapsible__heading footer__heading">About</h2>
+            <svg class="icon icon--white collapsible__icon">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <ul class="list collapsible--content">
+            <li><a href="#"> AAAAA</a></li>
+            <li><a href="#"> BBBBB</a></li>
+            <li><a href="#"> CCCCC</a></li>
+            <li><a href="#"> DDDDD</a></li>
+            <li><a href="#"> EEEEE</a></li>
+          </ul>
+        </article>
+
+        <article class="collapsible footer--content">
+          <header class="collapsible--header">
+            <h2 class="collapsible__heading footer__heading">About</h2>
+            <svg class="icon icon--white collapsible__icon">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <ul class="list collapsible--content">
+            <li><a href="#"> AAAAA</a></li>
+            <li><a href="#"> BBBBB</a></li>
+            <li><a href="#"> CCCCC</a></li>
+            <li><a href="#"> DDDDD</a></li>
+            <li><a href="#"> EEEEE</a></li>
+          </ul>
+        </article>
+        <article class="footer__logo">
+          <img src="images/logo.svg" alt="logo" />
+          <p class="footer__copyright">Copyright &copy; 2020</p>
+        </article>
       </div>
     </section>
 
