building with parcel. Commit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <img src="images/logo.svg" alt="" />
         </a>
         <svg class="icon icon--white nav__toggler">
-          <use xlink:href="images/sprite.svg#menu"></use>
+          <use href="images/sprite.svg#menu"></use>
         </svg>
         <ul class="list collapsible--content nav__list">
           <li class="list__item"><a href="#">Apple</a></li>
@@ -76,7 +76,7 @@
         />
         <button class="btn btn--accent">
           <svg class="icon icon--white">
-            <use xlink:href="images/sprite.svg#search"></use>
+            <use href="images/sprite.svg#search"></use>
           </svg>
           SEARCH
         </button>
@@ -168,7 +168,7 @@
         <div class="feature__content" data-aos="fade-right">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#easy"></use>
+              <use href="images/sprite.svg#easy"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Easy to use</h3>
@@ -195,7 +195,7 @@
         <div class="feature__content" data-aos="fade-left">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#computer"></use>
+              <use href="images/sprite.svg#computer"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Easy to use</h3>
@@ -222,7 +222,7 @@
         <div class="feature__content" data-aos="fade-right">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#wordpress"></use>
+              <use href="images/sprite.svg#wordpress"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Easy to use</h3>
@@ -258,7 +258,7 @@
           <source
             type="image/webp"
             srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x" />
-          <img src="images/ipad@2x.jpg" alt=""
+          <img src="images/ipad@2x.png" alt=""
         /></picture>
 
         <ul class="list" data-aos="zoom-in-up">
@@ -266,7 +266,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#snap"></use>
+                  <use href="images/sprite.svg#snap"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -283,7 +283,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#snap"></use>
+                  <use href="images/sprite.svg#snap"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -300,7 +300,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#snap"></use>
+                  <use href="images/sprite.svg#snap"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -336,7 +336,7 @@
                 />
                 <span class="icon-container icon-container--accent">
                   <svg class="icon icon--white icon--small">
-                    <use xlink:href="images/sprite.svg#quotes"></use>
+                    <use href="images/sprite.svg#quotes"></use>
                   </svg>
                 </span>
               </div>
@@ -350,7 +350,7 @@
                   <div class="media">
                     <div class="media__image">
                       <svg class="icon icon--primary">
-                        <use xlink:href="images/sprite.svg#line"></use>
+                        <use href="images/sprite.svg#line"></use>
                       </svg>
                     </div>
                     <div class="media__body">
@@ -372,7 +372,7 @@
           <div class="collapsible--header">
             <h2 class="collapsible__heading footer__heading">About</h2>
             <svg class="icon icon--white collapsible__icon">
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <ul class="list collapsible--content">
@@ -388,7 +388,7 @@
           <div class="collapsible--header">
             <h2 class="collapsible__heading footer__heading">About</h2>
             <svg class="icon icon--white collapsible__icon">
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <ul class="list collapsible--content">
@@ -404,7 +404,7 @@
           <div class="collapsible--header">
             <h2 class="collapsible__heading footer__heading">About</h2>
             <svg class="icon icon--white collapsible__icon">
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <ul class="list collapsible--content">
@@ -420,7 +420,7 @@
           <div class="collapsible--header">
             <h2 class="collapsible__heading footer__heading">About</h2>
             <svg class="icon icon--white collapsible__icon">
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <ul class="list collapsible--content">
@@ -438,13 +438,12 @@
       </div>
     </footer>
 
+    <p>alahu</p>
+
     <script src="js/main.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
-
-    <p>apa lanjiao!</p>
-    nani!!!
   </body>
 </html>
